reader controller updated for Swagger
