# controllers/reader_controller.go
@@ -12,6 +12,13 @@ import (
 type ReaderController struct {
 }
 
+// GetReaders           godoc
+// @Summary		Get readers array
+// @Description	Responds with the list of all readers as JSON.
+// @Tags			readers
+// @Produce		json
+// @Success		200	{object}	entities.Reader
+// @Router			/readers [get]
 func (r ReaderController) GetAll(c *gin.Context) {
 	var readerModel models.ReaderModel
 	readers, _ := readerModel.GetAll()
@@ -19,6 +26,16 @@ func (r ReaderController) GetAll(c *gin.Context) {
 	c.IndentedJSON(http.StatusOK, readers)
 }
 
+// GetReader           godoc
+// @Summary		Get single reader by id
+// @Description	Returns the reader whose id value matches the id.
+// @Tags			readers
+// @Produce		json
+// @Param			id path	string true "search reader by id"
+// @Success		200		{object}	entities.Reader
+// @Failure 	400     error message
+// @Failure 	406     error message
+// @Router			/readers/{id} [get]
 func (r ReaderController) GetById(c *gin.Context) {
 	str_id := c.Param("id")
 	int_id, errId := strconv.Atoi(str_id)
@@ -39,6 +56,16 @@ func (r ReaderController) GetById(c *gin.Context) {
 	c.IndentedJSON(http.StatusOK, reader)
 }
 
+// CreateReader           godoc
+// @Summary		Add a new reader
+// @Description	Takes a reader JSON and store in DB. Return saved JSON.
+// @Tags			readers
+// @Produce		json
+// @Param			reader body	entities.Reader	true "Reader JSON"
+// @Success		200		{object}	entities.Reader
+// @Failure 	400     error message
+// @Failure 	406     error message
+// @Router			/readers [post]
 func (r ReaderController) Create(c *gin.Context) {
 
 	var reader entities.Reader
@@ -71,6 +98,16 @@ func (r ReaderController) Create(c *gin.Context) {
 
 }
 
+// EditReader           godoc
+// @Summary		Edit an reader
+// @Description	Takes a reader JSON and edit an in DB. Return saved JSON.
+// @Tags			readers
+// @Produce		json
+// @Param			reader body	entities.Reader	true "Reader JSON"
+// @Success		200		{object}	entities.Reader
+// @Failure 	400     error message
+// @Failure 	406     error message
+// @Router			/readers [put]
 func (r ReaderController) Edit(c *gin.Context) {
 
 	var reader entities.Reader
@@ -94,6 +131,16 @@ func (r ReaderController) Edit(c *gin.Context) {
 	c.IndentedJSON(http.StatusAccepted, gin.H{"message": "Reader has been edited", "reader_id": reader.ID})
 }
 
+// DeleteReader          godoc
+// @Summary		Delete an reader
+// @Description	Remove an reader from DB by id.
+// @Tags			readers
+// @Produce		json
+// @Param			id path	string true "delete reader by id"
+// @Success		200		{object}	entities.Reader
+// @Failure 	400     error message
+// @Failure 	406     error message
+// @Router			/readers/{id} [delete]
 func (r ReaderController) Delete(c *gin.Context) {
 
 	str_id := c.Param("id")
