# docs/swagger.yaml
@@ -568,4 +568,124 @@ paths:
       summary: Get single publisher by id
       tags:
       - publishers
+  /readers:
+    get:
+      description: Responds with the list of all readers as JSON.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entities.Reader'
+      summary: Get readers array
+      tags:
+      - readers
+    post:
+      description: Takes a reader JSON and store in DB. Return saved JSON.
+      parameters:
+      - description: Reader JSON
+        in: body
+        name: reader
+        required: true
+        schema:
+          $ref: '#/definitions/entities.Reader'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entities.Reader'
+        "400":
+          description: Bad Request
+          schema:
+            type: error
+        "406":
+          description: Not Acceptable
+          schema:
+            type: error
+      summary: Add a new reader
+      tags:
+      - readers
+    put:
+      description: Takes a reader JSON and edit an in DB. Return saved JSON.
+      parameters:
+      - description: Reader JSON
+        in: body
+        name: reader
+        required: true
+        schema:
+          $ref: '#/definitions/entities.Reader'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entities.Reader'
+        "400":
+          description: Bad Request
+          schema:
+            type: error
+        "406":
+          description: Not Acceptable
+          schema:
+            type: error
+      summary: Edit an reader
+      tags:
+      - readers
+  /readers/{id}:
+    delete:
+      description: Remove an reader from DB by id.
+      parameters:
+      - description: delete reader by id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entities.Reader'
+        "400":
+          description: Bad Request
+          schema:
+            type: error
+        "406":
+          description: Not Acceptable
+          schema:
+            type: error
+      summary: Delete an reader
+      tags:
+      - readers
+    get:
+      description: Returns the reader whose id value matches the id.
+      parameters:
+      - description: search reader by id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entities.Reader'
+        "400":
+          description: Bad Request
+          schema:
+            type: error
+        "406":
+          description: Not Acceptable
+          schema:
+            type: error
+      summary: Get single reader by id
+      tags:
+      - readers
 swagger: "2.0"
